--- a/webapp/assets/css/class.css
+++ b/webapp/assets/css/class.css
@@ -47,3 +47,8 @@
 .box-subjectlist {
     border-top-color: rgb(255, 189, 151);
 }
+
+.teamList-box {
+    border-top: 1px solid rgba(10, 10, 10, 0.30);
+
+}
