--- a/webapp/assets/css/class.css
+++ b/webapp/assets/css/class.css
@@ -58,3 +58,109 @@
     height: 60px; !important;
 }
 
+.a_c {
+    text-align: center;
+    vertical-align: center;
+}
+
+
+/*custom-inpu-file*/
+
+.js .inputfile {
+    width: 0.1px;
+    height: 0.1px;
+    opacity: 0;
+    overflow: hidden;
+    position: absolute;
+    z-index: -1;
+}
+
+.inputfile + label {
+    max-width: 100%;
+    font-family: inherit;
+    font-size: 15px;
+    /* 20px */
+    font-weight: inherit;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    cursor: pointer;
+    display: inline-block;
+    overflow: hidden;
+    padding: 5px 20px;
+    /* 10px 20px */
+}
+
+/*
+.no-js .inputfile + label {
+    display: none;
+}
+*/
+
+.inputfile:focus + label,
+.inputfile.has-focus + label {
+    outline: 1px dotted #000;
+    outline: -webkit-focus-ring-color auto 5px;
+}
+
+.inputfile + label * {
+    /* pointer-events: none; */
+    /* in case of FastClick lib use */
+}
+
+
+/* style 6 */
+
+.inputfile-6 + label {
+    color: #000000;
+    margin-bottom: 0;
+}
+
+.inputfile-6 + label {
+    border: 1px solid #b9b9b9;
+    background-color: #FFFFFF;
+    padding: 0;
+}
+
+.inputfile-6:focus + label,
+.inputfile-6.has-focus + label,
+.inputfile-6 + label:hover {
+    border-color: #b9b9b9;
+}
+
+.inputfile-6 + label span {
+    padding: 3px 10px
+}
+.inputfile-6 + label h5 {
+    padding: 5px 20px;
+    margin: 0 0;
+    /* 10px 20px */
+}
+
+.inputfile-6 + label span {
+    width: 200px;
+    min-height: 10px;
+    font-size: 12px;
+    display: inline-block;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+    overflow: hidden;
+    vertical-align: top;
+}
+
+.inputfile-6 + label h5 {
+    height: 100% ;
+    color: #ffffff;
+    font-size: 12px;
+    background-color: #337ab7;
+    display: inline-block;
+}
+
+.inputfile-6:focus + label h5,
+.inputfile-6.has-focus + label h5,
+.inputfile-6 + label:hover h5 {
+    background-color: #265a88;
+}
+
+.file-td {
+    padding: 4px 0 0 8px;
+}
