--- a/webapp/assets/jqGrid/css/ui.jqgrid.css
+++ b/webapp/assets/jqGrid/css/ui.jqgrid.css
@@ -4,7 +4,7 @@
 	-moz-box-sizing: content-box; 
 	-webkit-box-sizing: content-box; 
 	box-sizing: content-box;
-	font-size:11px;
+	font-size:12px;
 }
 .ui-jqgrid .ui-jqgrid-view {
 	position: relative;
@@ -27,9 +27,9 @@
 .ui-jqgrid .ui-jqgrid-titlebar-close:hover { padding: 0; }
 .ui-jqgrid .menubar:hover {  border: 0 none;}
 /* header*/
-.ui-jqgrid .ui-jqgrid-hdiv {position: relative; margin: 0;padding: 0; overflow: hidden; border-left: 0 none !important; border-top : 0 none !important; border-right : 0 none !important;}
+.ui-jqgrid .ui-jqgrid-hdiv {position: relative; margin: 0 !important; border-bottom-width:0;padding: 0; overflow: hidden; border-left: 0 none !important; border-top : 0 none !important; border-right : 0 none !important;}
 .ui-jqgrid .ui-jqgrid-hbox {float: left; padding-right: 20px;}
-.ui-jqgrid .ui-jqgrid-htable {table-layout:fixed;margin:0;border-collapse: separate;}
+.ui-jqgrid .ui-jqgrid-htable {table-layout:fixed;margin:0;border-collapse: collapse;}
 .ui-jqgrid .ui-jqgrid-htable th { height: 27px; padding: 0 2px 0 2px;}
 .ui-jqgrid .ui-jqgrid-htable th div {overflow: hidden; position:relative;margin: .1em 0em .1em 0em;}
 .ui-th-column, .ui-jqgrid .ui-jqgrid-htable th.ui-th-column {overflow: hidden;white-space: nowrap;text-align:center;border-top : 0 none;border-bottom : 0 none;}
@@ -54,14 +54,14 @@
 .ui-jqgrid tr.ui-search-toolbar select {}
 /* body */ 
 .ui-jqgrid .ui-jqgrid-bdiv {position: relative; margin: 0; padding:0; overflow: auto; text-align:left;z-index: 101;}
-.ui-jqgrid .ui-jqgrid-btable {table-layout:fixed; margin:0; outline-style: none; border-collapse: separate;}
+.ui-jqgrid .ui-jqgrid-btable {table-layout:fixed; margin:0; outline-style: none; border-collapse: collapse;}
 .ui-jqgrid tr.jqgrow,
 .ui-jqgrid tr.jqgroup 
 	{ outline-style: none; }
 .ui-jqgrid tr.jqgrow td,
 .ui-jqgrid tr.jqgroup td
 	{font-weight: normal; overflow: hidden; white-space: pre; height: 23px;padding: 1px 2px 1px 2px;border-bottom-width: 1px; border-bottom-color: inherit; border-bottom-style: solid;}
-.ui-jqgrid tr.jqgfirstrow td {padding: 0 2px 0 2px;border-right-width: 1px; border-right-style: solid; height:auto;}
+.ui-jqgrid tr.jqgfirstrow td {padding: 0 2px 0 2px; border: none !important; height:auto;}
 .ui-jqgrid tr.jqfoot td {font-weight: bold; overflow: hidden; white-space: pre; height: 22px;padding: 0 2px 0 2px;border-bottom-width: 1px; border-bottom-color: inherit; border-bottom-style: solid;}
 .ui-jqgrid tr.ui-row-ltr td {text-align:left;border-right-width: 1px; border-right-color: inherit; border-right-style: solid;}
 .ui-jqgrid tr.ui-row-rtl td {text-align:right;border-left-width: 1px; border-left-color: inherit; border-left-style: solid;}
@@ -367,6 +367,9 @@ a.g-menu-item, a.soptclass, a.clearsearchclass { cursor: pointer; }
 .ui-jqgrid .ui-jqgrid-htable .ui-th-div {
 	height:17px;
 	margin-top:5px;
+	font-size: 12px;
+	font-weight: bold;
+	font:"NanumGothicB";
 }
 .column-menu, .ui-search-menu {
 	padding: 10px 10px;
@@ -482,3 +485,4 @@ td.menu_text {
 	width:auto;
 	position: absolute;
 }
+
