--- a/webapp/assets/css/class.css
+++ b/webapp/assets/css/class.css
@@ -85,7 +85,7 @@
     text-overflow: ellipsis;
     white-space: nowrap;
     cursor: pointer;
-    display: inline-block;
+    display: inline-flex;
     overflow: hidden;
     padding: 5px 20px;
     /* 10px 20px */
@@ -192,7 +192,7 @@
     padding: 2px !important;
 }
 
-.class-th {
+.table-text {
     padding-top : 6px !important;
     padding-bottom: 6px !important;
 }
