--- a/webapp/assets/css/jquery.datepicker.css
+++ b/webapp/assets/css/jquery.datepicker.css
@@ -271,6 +271,12 @@
 }
 .btn-date {
 	padding-top: 3px;
-	padding-bottom: 3px;
+	padding-bottom: 2px;
 	background-color: rgba(0,0,0,0);
+}
+
+.input-datepicker {
+	height: 23px !important;
+	padding: 0px 5px;
+	font-size: 12px !important;
 }
