--- a/webapp/assets/css/tcoms.css
+++ b/webapp/assets/css/tcoms.css
@@ -161,6 +161,10 @@ input[type=radio] {
 	margin: 0px 0px 0px 0px;
 }
 
+/* sub-box 안쪽에 작은 박스 */
+.innerBox {
+	padding: 0px 2px 2px 2px;
+}
 
 
 /***********************************/
@@ -256,9 +260,10 @@ input[type=radio] {
 
 /* 작은 사이즈 버튼*/
 .btn-sm {
-	width: 60px !important;
 	height:20px !important;
 	text-align: center !important;
+	padding: 0px 5px 0px 5px !important;
+	font-size: 11px !important;
 }
 
 
