--- a/webapp/assets/css/tcoms.css
+++ b/webapp/assets/css/tcoms.css
@@ -1,6 +1,3 @@
-
-
-
 /***********************************/
 /* 전체 레이아웃 관련 설정  */
 
@@ -125,6 +122,7 @@ input[type=radio] {
 
 .radio-group{
 	padding: 1px 0px 1px 0px;
+	height: 25px !important;
 }
 
 .radiobox{
@@ -349,5 +347,6 @@ input[type=radio] {
 	overflow-y:scroll;
 	white-space: nowrap;
 }
+
 
 
