--- a/webapp/assets/css/tcoms.css
+++ b/webapp/assets/css/tcoms.css
@@ -148,6 +148,7 @@ input[type=radio] {
 	font-size: 14px;
 	font-weight :800;
 	margin:0px 0px 3px 0px;
+	height: 20px !important;
 }
 
 /* 영역컨텐츠박스 */
