기능 사용설명 div 추가

--- a/webapp/assets/css/class.css
+++ b/webapp/assets/css/class.css
@@ -205,3 +205,9 @@ textarea {
     padding: 5px 10px;
     vertical-align: middle;
 }
+
+.blank-div {
+    margin-top:25px;
+    height: 137px;
+    border: 1px solid #a2a5ab
+}
