출신업무관리 화면관련 css변경

--- a/webapp/assets/css/tcoms.css
+++ b/webapp/assets/css/tcoms.css
@@ -70,25 +70,47 @@
 thead > tr > th,
 thead > tr > td,
 tbody > tr > th,
-tbody > tr > td{
+tbody > tr > td,
+tfoot > tr > th,
+tfoot > tr > td{
 	border: 1px solid #a2a5ab !important;
 }
 
-/* 테이블 td 중간정렬 */
-.table > tbody > tr > td {
+/* 테이블 td 세로중간정렬 */
+tbody > tr > td,
+tbody > tr > th,
+tbody > tr > th,
+tbody > tr > td,
+tfoot > tr > th,
+tfoot > tr > td {
     vertical-align: middle !important;
 }
 
 /* 테이블 해더 부분 배경색  정의*/
 thead > tr > th,
-tbody > tr > th{
+tbody > tr > th,
+tfoot > tr > th{
 	background-color: #e2e6ef !important;
 }
 
+/* 좁은높이테이블 */
 .table-condensed > tbody > tr > td,
+.table-condensed > tbody > tr > th,
 .table-condensed > tfoot > tr > td,
-.table-condensed > thead > tr > td{
+.table-condensed > tfoot > tr > th,
+.table-condensed > thead > tr > td,
+.table-condensed > thead > tr > th{
 	padding: 2px 2px 2px 2px !important;
+	height: 28px !important;
+	vertical-align: middle !important;
+}
+
+th 의 텍스트가 다른것과 같이 사용될때
+.with_Radio{
+	position: absolute !important;
+    top: 50% !important;
+    height: 30px !important;
+    margin-top: -30px !important;
 }
 
 
@@ -148,8 +170,13 @@ input[type=radio] {
 	font-size: 14px;
 	font-weight :800;
 	margin:0px 0px 3px 0px;
-	height: 20px !important;
+	padding: 0px 0px 0px 0px; 
+	height: 25px !important;
+	display: table-cell;
+	vertical-align: bottom;
 }
+
+
 
 /* 영역컨텐츠박스 */
 .sub-body{
@@ -269,10 +296,11 @@ input[type=radio] {
 
 
 /* 아주작은 사이즈 버튼*/
-.btn-ssm {
-	width: 60px !important;
-	height:10px !important;
+.btn-h25 {
+	height:25px !important;
 	text-align: center !important;
+	vertical-align: middle;
+	padding: 0px 5px 0px 5px !important;
 }
 
 
@@ -338,6 +366,19 @@ input[type=radio] {
 .w100{width: 100px !important;}
 .w120{width: 120px !important;}
 .w140{width: 140px !important;}
+.w160{width: 160px !important;}
+.w180{width: 180px !important;}
+.w200{width: 200px !important;}
+.w220{width: 220px !important;}
+.w240{width: 240px !important;}
+.w260{width: 260px !important;}
+.w280{width: 280px !important;}
+.w300{width: 300px !important;}
+.w320{width: 320px !important;}
+.w340{width: 340px !important;}
+.w360{width: 360px !important;}
+.w380{width: 380px !important;}
+.w400{width: 400px !important;}
 
 .bordered{
 	border: 1px solid #a2a5ab !important;
@@ -354,3 +395,27 @@ input[type=radio] {
 }
 
 
+/* 모달관련 */
+
+.modal-body {
+	background-color: #ffffff !important;
+	font-size: 12px
+}
+
+
+
+
+/* .modal-content {
+  	border-radius: 6px !important;	
+  	background-color: #d7dce2 !important;
+}
+ */
+ 
+/* 
+.modal-header {
+  	background-color: #ecf0f5 !important;
+}
+.modal-footer {
+  	background-color: #ecf0f5 !important;
+}
+ */
